--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ weston (13.0.0-4) unstable; urgency=medium
 weston (13.0.0-3) unstable; urgency=medium
 
   * Retrict architectures where tests are run
-  * Disable backend-rdp for i64 and backend-vnc for i64 and sparc64,
+  * Disable backend-rdp for ia64 and backend-vnc for ia64 and sparc64,
       because of Build-Deps not available.
   * Mark Skip_xwayland_test.patch as 'Forwarded: not-needed'
   * Switch from pkg-config to pkgconf
