--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+weston (13.0.0-5) unstable; urgency=medium
+
+  * Don't install disabled features on ia64 and sparc64
+  * Do not check the upper limit for neatvnc version (Closes: #1065816)
+
+ -- Dylan Aïssi <daissi@debian.org>  Mon, 11 Mar 2024 12:01:23 +0100
+
 weston (13.0.0-4) unstable; urgency=medium
 
   * Fix syntax of non fatal tests
