--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+weston (13.0.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 23 Apr 2024 21:06:19 +0200
+
 weston (13.0.0-5) unstable; urgency=medium
 
   * Don't install disabled features on ia64 and sparc64
