--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 weston (13.0.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update symbols file
 
  -- Dylan Aïssi <daissi@debian.org>  Tue, 23 Apr 2024 21:06:19 +0200
 
