--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ weston (13.0.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Update symbols file
+  * Standards-Version: 4.7.0 (no changes required)
 
  -- Dylan Aïssi <daissi@debian.org>  Tue, 23 Apr 2024 21:06:19 +0200
 
