--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-weston (13.0.1-1) UNRELEASED; urgency=medium
+weston (13.0.1-1) unstable; urgency=medium
 
   * New upstream release.
   * Update symbols file
   * Standards-Version: 4.7.0 (no changes required)
   * Don't install rdp-backend on ia64 (disabled)
 
- -- Dylan Aïssi <daissi@debian.org>  Tue, 23 Apr 2024 21:06:19 +0200
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 23 Apr 2024 21:47:40 +0200
 
 weston (13.0.0-5) unstable; urgency=medium
 
