--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+weston (14.0.0-1~exp1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 16:16:22 +0200
+
 weston (13.0.3-1) unstable; urgency=medium
 
   * New upstream release.
