--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 weston (14.0.0-1~exp1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Drop Remove_upper_limit_of_required_neatvnc_version.patch,
+      no longer required.
 
  -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 16:16:22 +0200
 
