--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ weston (14.0.0-1~exp1) UNRELEASED; urgency=medium
   * Drop Remove_upper_limit_of_required_neatvnc_version.patch,
       no longer required.
   * Add new Build-Deps: libdisplay-info-dev
+  * Bump SONAME to libweston-14-0
 
  -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 16:16:22 +0200
 
