--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ weston (14.0.0-1~exp1) UNRELEASED; urgency=medium
   * Bump SONAME to libweston-14-0
   * Update symbols file
   * Drop gentarball target in rules since we use upstream signed tarballs
+  * Drop packaging tweaks for architecture ia64
 
  -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 16:16:22 +0200
 
