--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-weston (14.0.0-1~exp1) UNRELEASED; urgency=medium
+weston (14.0.0-1~exp1) experimental; urgency=medium
 
   * New upstream release.
   * Drop Remove_upper_limit_of_required_neatvnc_version.patch,
@@ -11,7 +11,7 @@ weston (14.0.0-1~exp1) UNRELEASED; urgency=medium
   * Update minimum version of Build-Deps
       - wayland-protocols >= 1.33
 
- -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 16:16:22 +0200
+ -- Dylan Aïssi <daissi@debian.org>  Wed, 04 Sep 2024 17:17:11 +0200
 
 weston (13.0.3-1) unstable; urgency=medium
 
