--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-weston (14.0.0-1~exp2) UNRELEASED; urgency=medium
+weston (14.0.0-1~exp2) experimental; urgency=medium
 
   * Switch to freerdp3-dev from freerdp2-dev in Build-Deps
 
- -- Dylan Aïssi <daissi@debian.org>  Sat, 07 Sep 2024 11:28:23 +0200
+ -- Dylan Aïssi <daissi@debian.org>  Mon, 09 Sep 2024 17:17:54 +0200
 
 weston (14.0.0-1~exp1) experimental; urgency=medium
 
