--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+weston (14.0.0-1.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload
+  * d/p/libweston-noop-renderer-Check-shm_buffer-for-NULL.patch:
+    Add proposed patch fixing a crash while running the gtk4 test suite.
+    Thanks to Jan Alexander Steffens (heftig) (Closes: #1081515)
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 14 Sep 2024 19:12:51 +0100
+
 weston (14.0.0-1) unstable; urgency=medium
 
   * Upload to unstable
