--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ weston (14.0.0-3) UNRELEASED; urgency=medium
 
   * Enable tests (build time and autopkgtest) on armhf since
       they are now successful.
+  * Bump minimum version of libdisplay-info-dev to 0.2.0,
+      it's required to get a better color management like HDR support.
 
  -- Dylan Aïssi <daissi@debian.org>  Fri, 20 Sep 2024 09:37:15 +0200
 
