--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+weston (14.0.0-3) UNRELEASED; urgency=medium
+
+  * Enable tests (build time and autopkgtest) on armhf since
+      they are now successful.
+
+ -- Dylan Aïssi <daissi@debian.org>  Fri, 20 Sep 2024 09:37:15 +0200
+
 weston (14.0.0-2) unstable; urgency=medium
 
   [ Simon McVittie ]
