--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-weston (14.0.0-3) UNRELEASED; urgency=medium
+weston (14.0.0-3) experimental; urgency=medium
 
   * Enable tests (build time and autopkgtest) on armhf since
       they are now successful.
