--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+weston (14.0.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * Update Homepage
+
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 22 Oct 2024 17:30:05 +0200
+
 weston (14.0.0-3) experimental; urgency=medium
 
   * Enable tests (build time and autopkgtest) on armhf since
