--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-weston (14.0.1-1) UNRELEASED; urgency=medium
+weston (14.0.1-1) unstable; urgency=medium
 
   * New upstream release.
-  * Update Homepage
+  * Update Homepage in debian/control.
   * Drop libweston-noop-renderer-Check-shm_buffer-for-NULL.patch,
       included in upstream release.
 
- -- Dylan Aïssi <daissi@debian.org>  Tue, 22 Oct 2024 17:30:05 +0200
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 22 Oct 2024 17:50:04 +0200
 
 weston (14.0.0-3) experimental; urgency=medium
 
