--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+weston (14.0.1-1-maruska) unstable; urgency=medium
+
+  [ Dylan Aïssi ]
+  * Run autopkgtest on failing architectures but marked as flaky
+
+  [ Michal Maruska ]
+  * call the new libinput_setup_fork()
+
+ -- Michal Maruska <mmaruska@gmail.com>  Thu, 31 Oct 2024 10:59:03 +0100
+
 weston (14.0.1-1) unstable; urgency=medium
 
   * New upstream release.
